--- a/settings.gradle
+++ b/settings.gradle
@@ -13,13 +13,7 @@ dependencyResolutionManagement {
             }
         }
 
-        maven {
-            name "linphone.org maven repository"
-            url "https://linphone.org/maven_repository"
-            content {
-                includeGroup "org.linphone"
-            }
-        }
+        maven { url "https://linphone.org/maven_repository"}
 
         // For "org.jlleitschuh.gradle:ktlint-gradle"
         mavenCentral()
